force-app/main/default/objects/ssot__LearningCourse__dlm/fields/ssot__CourseLevelDescription__c.field-meta.xml
<CustomField>
    <fullName>ssot__CourseLevelDescription__c</fullName>
    <label>Course Level Description</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CourseLevelDescription</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>