force-app/main/default/objects/ssot__LearningCourse__dlm/fields/ssot__CourseNumberText__c.field-meta.xml
<CustomField>
    <fullName>ssot__CourseNumberText__c</fullName>
    <label>Course Number</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CourseNumberText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>