force-app/main/default/objects/ssot__LearningCourse__dlm/fields/ssot__rel_1719819884205_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719819884205_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LearningCourse_LearningId_map_Learni_rel</label>
    <referenceTo>ssot__Learning__dlm</referenceTo>
    <relationshipLabel>LearningCourse_LearningId_map_Learni_rel</relationshipLabel>
    <relationshipName>rel_1719819884205_end</relationshipName>
    <type>Lookup</type>
</CustomField>