force-app/main/default/objects/ssot__LearningCourse__dlm/fields/ssot__SubjectAbbreviationText__c.field-meta.xml
<CustomField>
    <fullName>ssot__SubjectAbbreviationText__c</fullName>
    <label>Subject Abbreviation</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SubjectAbbreviationText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>